# esp32c3-rt-benchmarks

./: Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
examples/: benchmark-direct.rs  benchmark-hal.rs  test.rs
