[package]
name = "esp32c3-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
esp32c3 = {version = "0.14.0", features = ["rt"]}
esp32c3-hal = { git = "https://github.com/onsdagens/esp-hal", branch="runtime", features = ["interrupt-preemption"] }
critical-section = "1.1.1"
rtt-target = { version = "0.3.1", features = ["riscv"] }
esp-println = { version = "0.11.0", features = ["esp32c3"] }
[profile.release]
incremental = false
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash
opt-level = 3

[features]
direct = ["esp32c3-hal/direct-vectoring"]

[[example]]
name              = "benchmark-direct"
required-features = ["direct"]

[patch.crates-io]
rtt-target = { git = 'https://github.com/onsdagens/rtt-target'}
